fix to namespaces

--- a/slackClone/public/slack.html
+++ b/slackClone/public/slack.html
@@ -4,10 +4,10 @@
 
 <div class="container-fluid">
     <div class="row">
-            <div class="namespaces">
-               <!-- coming from socket-server -->
-            </div>
-            <div class="rooms">
+        <div class="namespaces">
+            <!-- Populated from the socket server! -->
+        </div>
+        <div class="rooms">
             <div class="main-rooms">
                 <h6 class="pointer">
                     <i class="room-caret fa-solid fa-caret-down"></i>Rooms
@@ -87,7 +87,8 @@
 </div>
 
 <script src="/socket.io/socket.io.js"></script>
-<script src="/joinNS.js"></script>
+<script src="/buildMessageHtml.js"></script>
+<script src="/joinRoom.js"></script>
+<script src="/joinNs.js"></script>
 <script src="/scripts.js"></script>
-
 
